lab1/Code/syntax.output
State 17 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce
State 26 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 46 conflicts: 1 shift/reduce
State 59 conflicts: 1 shift/reduce
State 61 conflicts: 1 shift/reduce
State 76 conflicts: 1 shift/reduce
State 100 conflicts: 1 shift/reduce
State 102 conflicts: 1 shift/reduce
State 108 conflicts: 6 shift/reduce
State 120 conflicts: 1 shift/reduce
State 124 conflicts: 6 shift/reduce
State 138 conflicts: 11 shift/reduce
State 140 conflicts: 1 shift/reduce
State 142 conflicts: 1 shift/reduce
State 144 conflicts: 1 shift/reduce
State 146 conflicts: 1 shift/reduce
State 148 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 152 conflicts: 1 shift/reduce
State 154 conflicts: 1 shift/reduce
State 158 conflicts: 6 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | error Specifier SEMI
    9       | error FunDec CompSt

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList
   12           | VarDec error ExtDecList
   13           | error ExtDecList

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag

   18 OptTag: ID
   19       | %empty

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB
   23       | VarDec LB error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID error RP
   27       | ID LP error RP

   28 VarList: ParamDec COMMA VarList
   29        | ParamDec
   30        | ParamDec error VarList
   31        | ParamDec error

   32 ParamDec: Specifier VarDec

   33 CompSt: LC DefList StmtList RC
   34       | LC DefList StmtList error
   35       | LC error RC

   36 StmtList: Stmt StmtList
   37         | %empty

   38 Stmt: Exp SEMI
   39     | CompSt
   40     | RETURN Exp SEMI
   41     | IF LP Exp RP Stmt
   42     | IF LP Exp RP Stmt ELSE Stmt
   43     | WHILE LP Exp RP Stmt
   44     | WHILE error RP
   45     | WHILE error RC
   46     | Exp error
   47     | WHILE LP Exp error
   48     | RETURN Exp error
   49     | RETURN error SEMI
   50     | error SEMI
   51     | Exp error SEMI

   52 DefList: Def DefList
   53        | %empty

   54 Def: Specifier DecList SEMI
   55    | error DecList SEMI
   56    | Specifier DecList error
   57    | Specifier error SEMI

   58 DecList: Dec
   59        | Dec COMMA DecList
   60        | Dec error DecList

   61 Dec: VarDec
   62    | VarDec ASSIGNOP Exp
   63    | VarDec error

   64 Exp: Exp ASSIGNOP Exp
   65    | Exp AND Exp
   66    | Exp OR Exp
   67    | Exp RELOP Exp
   68    | Exp PLUS Exp
   69    | Exp MINUS Exp
   70    | Exp STAR Exp
   71    | Exp DIV Exp
   72    | LP Exp RP
   73    | MINUS Exp
   74    | NOT Exp
   75    | ID LP Args RP
   76    | ID LP RP
   77    | Exp LB Exp RB
   78    | Exp DOT ID
   79    | ID
   80    | INT
   81    | FLOAT
   82    | LP error RP
   83    | MINUS error
   84    | ID LP error RP
   85    | NOT error
   86    | Exp ASSIGNOP error
   87    | Exp AND error
   88    | Exp OR error
   89    | Exp RELOP error
   90    | Exp PLUS error
   91    | Exp MINUS error
   92    | Exp STAR error
   93    | Exp DIV error
   94    | Exp error Exp

   95 Args: Exp COMMA Args
   96     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 9 12 13 23 26 27 30 31 34 35 44 45 46 47 48 49 50 51 55 56 57 60 63 82 83 84 85 86 87 88 89 90 91 92 93 94
    FLOAT <node_ins> (258) 81
    INT <node_ins> (259) 22 80
    TYPE <node_ins> (260) 14
    STRUCT <node_ins> (261) 16 17
    RETURN <node_ins> (262) 40 48 49
    IF <node_ins> (263) 41 42
    ELSE <node_ins> (264) 42
    WHILE <node_ins> (265) 43 44 45 47
    ID <node_ins> (266) 18 20 21 24 25 26 27 75 76 78 79 84
    SEMI <node_ins> (267) 4 5 8 38 40 49 50 51 54 55 57
    COMMA <node_ins> (268) 11 28 59 95
    ASSIGNOP <node_ins> (269) 62 64 86
    RELOP <node_ins> (270) 67 89
    PLUS <node_ins> (271) 68 90
    MINUS <node_ins> (272) 69 73 83 91
    STAR <node_ins> (273) 70 92
    DIV <node_ins> (274) 71 93
    AND <node_ins> (275) 65 87
    OR <node_ins> (276) 66 88
    DOT <node_ins> (277) 78
    NOT <node_ins> (278) 74 85
    LP <node_ins> (279) 24 25 27 41 42 43 47 72 75 76 82 84
    RP <node_ins> (280) 24 25 26 27 41 42 43 44 72 75 76 82 84
    LB <node_ins> (281) 22 23 77
    RB <node_ins> (282) 22 23 77
    LC <node_ins> (283) 16 33 34 35
    RC <node_ins> (284) 16 33 35 45
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node_ins> (33)
        on left: 1
        on right: 0
    ExtDefList <node_ins> (34)
        on left: 2 3
        on right: 1 2
    ExtDef <node_ins> (35)
        on left: 4 5 6 7 8 9
        on right: 2
    ExtDecList <node_ins> (36)
        on left: 10 11 12 13
        on right: 4 11 12 13
    Specifier <node_ins> (37)
        on left: 14 15
        on right: 4 5 6 7 8 32 54 56 57
    StructSpecifier <node_ins> (38)
        on left: 16 17
        on right: 15
    OptTag <node_ins> (39)
        on left: 18 19
        on right: 16
    Tag <node_ins> (40)
        on left: 20
        on right: 17
    VarDec <node_ins> (41)
        on left: 21 22 23
        on right: 10 11 12 22 23 32 61 62 63
    FunDec <node_ins> (42)
        on left: 24 25 26 27
        on right: 6 9
    VarList <node_ins> (43)
        on left: 28 29 30 31
        on right: 24 28 30
    ParamDec <node_ins> (44)
        on left: 32
        on right: 28 29 30 31
    CompSt <node_ins> (45)
        on left: 33 34 35
        on right: 6 9 39
    StmtList <node_ins> (46)
        on left: 36 37
        on right: 33 34 36
    Stmt <node_ins> (47)
        on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51
        on right: 36 41 42 43
    DefList <node_ins> (48)
        on left: 52 53
        on right: 16 33 34 52
    Def <node_ins> (49)
        on left: 54 55 56 57
        on right: 52
    DecList <node_ins> (50)
        on left: 58 59 60
        on right: 54 55 56 59 60
    Dec <node_ins> (51)
        on left: 61 62 63
        on right: 58 59 60
    Exp <node_ins> (52)
        on left: 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 38 40 41 42 43 46 47 48 51 62 64 65 66 67 68 69 70 71 72 73 74 77 78 86 87 88 89 90 91 92 93 94 95 96
    Args <node_ins> (53)
        on left: 95 96
        on right: 75 95


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error . Specifier SEMI
    9       | error . FunDec CompSt

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    ID      shift, and go to state 9

    Specifier        go to state 10
    StructSpecifier  go to state 8
    FunDec           go to state 11


State 2

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


State 3

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag

    ID  shift, and go to state 12

    $default  reduce using rule 19 (OptTag)

    OptTag  go to state 13
    Tag     go to state 14


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 15


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 16
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error

    error  shift, and go to state 17
    ID     shift, and go to state 18
    SEMI   shift, and go to state 19

    ExtDecList  go to state 20
    VarDec      go to state 21
    FunDec      go to state 22


State 8

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


State 9

   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP
   26       | ID . error RP
   27       | ID . LP error RP

    error  shift, and go to state 23
    LP     shift, and go to state 24


State 10

    8 ExtDef: error Specifier . SEMI

    SEMI  shift, and go to state 25


State 11

    9 ExtDef: error FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 12

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


State 13

   16 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 28


State 14

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


State 15

    0 $accept: Program $end .

    $default  accept


State 16

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 17

    7 ExtDef: Specifier error .
   13 ExtDecList: error . ExtDecList

    error  shift, and go to state 29
    ID     shift, and go to state 30

    $end    reduce using rule 7 (ExtDef)
    error   [reduce using rule 7 (ExtDef)]
    TYPE    reduce using rule 7 (ExtDef)
    STRUCT  reduce using rule 7 (ExtDef)

    ExtDecList  go to state 31
    VarDec      go to state 21


State 18

   21 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP
   26       | ID . error RP
   27       | ID . LP error RP

    error  shift, and go to state 23
    LP     shift, and go to state 24

    error  [reduce using rule 21 (VarDec)]
    SEMI   reduce using rule 21 (VarDec)
    COMMA  reduce using rule 21 (VarDec)
    LB     reduce using rule 21 (VarDec)


State 19

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 32


State 21

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   12           | VarDec . error ExtDecList
   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB

    error  shift, and go to state 33
    COMMA  shift, and go to state 34
    LB     shift, and go to state 35

    SEMI  reduce using rule 10 (ExtDecList)


State 22

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 36


State 23

   26 FunDec: ID error . RP

    RP  shift, and go to state 37


State 24

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP
   27       | ID LP . error RP

    error   shift, and go to state 38
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 39

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 41
    ParamDec         go to state 42


State 25

    8 ExtDef: error Specifier SEMI .

    $default  reduce using rule 8 (ExtDef)


State 26

   33 CompSt: LC . DefList StmtList RC
   34       | LC . DefList StmtList error
   35       | LC . error RC

    error   shift, and go to state 43
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 53 (DefList)]
    FLOAT   reduce using rule 53 (DefList)
    INT     reduce using rule 53 (DefList)
    RETURN  reduce using rule 53 (DefList)
    IF      reduce using rule 53 (DefList)
    WHILE   reduce using rule 53 (DefList)
    ID      reduce using rule 53 (DefList)
    MINUS   reduce using rule 53 (DefList)
    NOT     reduce using rule 53 (DefList)
    LP      reduce using rule 53 (DefList)
    LC      reduce using rule 53 (DefList)
    RC      reduce using rule 53 (DefList)

    Specifier        go to state 44
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 46


State 27

    9 ExtDef: error FunDec CompSt .

    $default  reduce using rule 9 (ExtDef)


State 28

   16 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 47
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 53 (DefList)

    Specifier        go to state 44
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 46


State 29

   13 ExtDecList: error . ExtDecList

    error  shift, and go to state 29
    ID     shift, and go to state 30

    ExtDecList  go to state 31
    VarDec      go to state 21


State 30

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


State 31

   13 ExtDecList: error ExtDecList .

    $default  reduce using rule 13 (ExtDecList)


State 32

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 33

   12 ExtDecList: VarDec error . ExtDecList

    error  shift, and go to state 29
    ID     shift, and go to state 30

    ExtDecList  go to state 49
    VarDec      go to state 21


State 34

   11 ExtDecList: VarDec COMMA . ExtDecList

    error  shift, and go to state 29
    ID     shift, and go to state 30

    ExtDecList  go to state 50
    VarDec      go to state 21


State 35

   22 VarDec: VarDec LB . INT RB
   23       | VarDec LB . error RB

    error  shift, and go to state 51
    INT    shift, and go to state 52


State 36

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 37

   26 FunDec: ID error RP .

    $default  reduce using rule 26 (FunDec)


State 38

   27 FunDec: ID LP error . RP

    RP  shift, and go to state 53


State 39

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 40

   32 ParamDec: Specifier . VarDec

    ID  shift, and go to state 30

    VarDec  go to state 54


State 41

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 55


State 42

   28 VarList: ParamDec . COMMA VarList
   29        | ParamDec .
   30        | ParamDec . error VarList
   31        | ParamDec . error

    error  shift, and go to state 56
    COMMA  shift, and go to state 57

    RP  reduce using rule 29 (VarList)


State 43

   35 CompSt: LC error . RC
   55 Def: error . DecList SEMI

    ID  shift, and go to state 30
    RC  shift, and go to state 58

    VarDec   go to state 59
    DecList  go to state 60
    Dec      go to state 61


State 44

   54 Def: Specifier . DecList SEMI
   56    | Specifier . DecList error
   57    | Specifier . error SEMI

    error  shift, and go to state 62
    ID     shift, and go to state 30

    VarDec   go to state 59
    DecList  go to state 63
    Dec      go to state 61


State 45

   33 CompSt: LC DefList . StmtList RC
   34       | LC DefList . StmtList error

    error   shift, and go to state 64
    FLOAT   shift, and go to state 65
    INT     shift, and go to state 66
    RETURN  shift, and go to state 67
    IF      shift, and go to state 68
    WHILE   shift, and go to state 69
    ID      shift, and go to state 70
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 72
    LP      shift, and go to state 73
    LC      shift, and go to state 26

    error  [reduce using rule 37 (StmtList)]
    RC     reduce using rule 37 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 75
    Stmt      go to state 76
    Exp       go to state 77


State 46

   52 DefList: Def . DefList

    error   shift, and go to state 47
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 53 (DefList)]
    FLOAT   reduce using rule 53 (DefList)
    INT     reduce using rule 53 (DefList)
    RETURN  reduce using rule 53 (DefList)
    IF      reduce using rule 53 (DefList)
    WHILE   reduce using rule 53 (DefList)
    ID      reduce using rule 53 (DefList)
    MINUS   reduce using rule 53 (DefList)
    NOT     reduce using rule 53 (DefList)
    LP      reduce using rule 53 (DefList)
    LC      reduce using rule 53 (DefList)
    RC      reduce using rule 53 (DefList)

    Specifier        go to state 44
    StructSpecifier  go to state 8
    DefList          go to state 78
    Def              go to state 46


State 47

   55 Def: error . DecList SEMI

    ID  shift, and go to state 30

    VarDec   go to state 59
    DecList  go to state 60
    Dec      go to state 61


State 48

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 79


State 49

   12 ExtDecList: VarDec error ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


State 50

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 51

   23 VarDec: VarDec LB error . RB

    RB  shift, and go to state 80


State 52

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 81


State 53

   27 FunDec: ID LP error RP .

    $default  reduce using rule 27 (FunDec)


State 54

   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   32 ParamDec: Specifier VarDec .

    LB  shift, and go to state 35

    $default  reduce using rule 32 (ParamDec)


State 55

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 56

   30 VarList: ParamDec error . VarList
   31        | ParamDec error .

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 31 (VarList)

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 82
    ParamDec         go to state 42


State 57

   28 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 40
    StructSpecifier  go to state 8
    VarList          go to state 83
    ParamDec         go to state 42


State 58

   35 CompSt: LC error RC .

    $default  reduce using rule 35 (CompSt)


State 59

   22 VarDec: VarDec . LB INT RB
   23       | VarDec . LB error RB
   61 Dec: VarDec .
   62    | VarDec . ASSIGNOP Exp
   63    | VarDec . error

    error     shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    LB        shift, and go to state 35

    error  [reduce using rule 61 (Dec)]
    SEMI   reduce using rule 61 (Dec)
    COMMA  reduce using rule 61 (Dec)


State 60

   55 Def: error DecList . SEMI

    SEMI  shift, and go to state 86


State 61

   58 DecList: Dec .
   59        | Dec . COMMA DecList
   60        | Dec . error DecList

    error  shift, and go to state 87
    COMMA  shift, and go to state 88
